fixed responsive design at very narrow screen sizes. changed to no wrap on navbar class

--- a/resources/css/header-style.css
+++ b/resources/css/header-style.css
@@ -24,7 +24,7 @@ header {
 
 .navbar {
     display: flex;
-    flex-wrap: wrap;
+    flex-wrap: nowrap;
     align-items: center;
     margin-left: 5%;
     margin-right: 5%;
