--- a/resources/css/modal-style.css
+++ b/resources/css/modal-style.css
@@ -20,7 +20,7 @@
 .modal-header {
     display: flex;
     justify-content: space-between;
-    align-items: start;
+    align-items: center;
     margin-bottom: 15px;
 }
 
@@ -31,8 +31,8 @@
     margin-bottom: auto;
 }
 
-.form-content h3 {
-    margin-bottom: 15px;
+.modal-h3 {
+    margin-bottom: 0px;
 }
 
 .form-content button {
@@ -61,7 +61,8 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    padding: 3px;
+
+    font-size: 1.2rem;
     background-color: transparent;
     border: transparent;
     color: var(--light-color);
